<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="wan_android">WanAndroid</string>
    //通用
    <string name="http_error">网络异常</string>
    <string name="unKnown_error">未知错误</string>
    <string name="me">我的</string>
    <string name="knowledge_hierarchy">知识体系</string>
    <string name="wx_article">公众号</string>
    <string name="home_pager">首页</string>
    <string name="navigation">导航</string>
    <string name="project">项目</string>
    <string name="search_tint">发现更多干货</string>
    <string name="action_search">搜索</string>
    <string name="history_search">搜索历史</string>
    <string name="hot_search">热搜</string>
    <string name="useful_sites">常用网站</string>
    <string name="navigation_drawer_open">打开侧栏</string>
    <string name="navigation_drawer_close">关闭侧栏</string>
    <string name="double_click_exit_tint">再按一次后退键退出</string>
    <string name="ok">是</string>
    <string name="no">否</string>
    <string name="reload">重新加载</string>
    <string name="open_project">开源项目</string>
    <string name="now">刚刚</string>
    <string name="minute">分钟</string>
    <string name="hour">小时</string>
    <string name="one_day">1天</string>
    <string name="failed_to_cast_mode">\"切换模式失败ヽ(≧Д≦)ノ\"</string>
    <string name="share_view">shareView</string>

    //登录
    <string name="login_title">账号密码登录</string>
    <string name="login_account_tint">请输入用户名</string>
    <string name="login_password_tint">请输入密码</string>
    <string name="login_confirm_password_tint">请输入确认密码</string>
    <string name="login_in">登录</string>
    <string name="register">注册</string>
    <string name="my_collect">收藏</string>
    <string name="about_us">关于我们</string>
    <string name="auto_login_in">自动登录</string>
    <string name="logout">退出登录</string>
    <string name="login_tint">请先登录~~</string>
    <string name="login_success">登录成功n(*≧▽≦*)n</string>
    <string name="account_password_null_tint">用户名或密码不能为空</string>
    <string name="login_fail">登录失败ヽ(≧Д≦)ノ</string>
    <string name="logout_fail">退出登录失败</string>
    <string name="register_fail">注册失败ヽ(≧Д≦)ノ</string>
    <string name="password_not_same">密码不匹配</string>
    <string name="auto_login_success">自动登录成功</string>

    //收藏
    <string name="no_collect">大侠，赶快存点干货吧~</string>

    //主页
    <string name="item_article_author">&#160;&#160;作者</string>
    <string name="item_article_share_user">&#160;&#160;分享者</string>
    <string name="item_article_classify">分类：<xliff:g id="classify">%s</xliff:g></string>
    <string name="item_article_time">时间：<xliff:g id="time">%s</xliff:g></string>
    <string name="item_article_top">置顶</string>
    <string name="item_article_new">新</string>
    <string name="install">安装</string>
    <string name="logout_tint">退出登录?</string>
    <string name="failed_to_obtain_banner_data">获取广告数据失败</string>
    <string name="failed_to_obtain_top_data">获取置顶数据失败</string>
    <string name="failed_to_obtain_article_list">获取文章列表数据失败</string>

    //知识体系
    <string name="failed_to_obtain_knowledge_data">获取知识体系数据列表失败</string>

    //公众号
    <string name="failed_to_obtain_wx_data">获取公众号数据列表失败</string>

    //导航
    <string name="navigation_tint">%1$s 导航资源持续更新中</string>
    <string name="failed_to_obtain_navigation_list">获取导航数据列表失败</string>

    //项目
    <string name="failed_to_obtain_project_list">获取项目数据列表失败</string>
    <string name="failed_to_obtain_project_classify_data">获取项目分类数据列表失败</string>

    //文章详情
    <string name="share">分享</string>
    <string name="collect">收藏</string>
    <string name="cancel_collect">取消收藏</string>
    <string name="collect_success">收藏成功</string>
    <string name="collect_fail">收藏失败</string>
    <string name="cancel_collect_success">取消收藏成功</string>
    <string name="cancel_collect_fail">取消收藏失败</string>
    <string name="failed_to_obtain_collection_data">获取收藏数据失败</string>
    <string name="open_it_with_browser">用系统浏览器打开</string>
    <string name="share_type_url">%1$s分享【%2$s】专题：%3$s</string>
    <string name="write_permission_not_allowed">获取写入权限失败</string>

    //搜索
    <string name="failed_to_obtain_search_data_list">获取搜索数据列表失败</string>
    <string name="failed_to_obtain_hot_data">获取热门数据失败</string>
    <string name="failed_to_obtain_useful_sites_data">获取常用网站数据失败</string>
    <string name="or">或</string>
    <string name="clear_all">清空</string>
    <string name="search_null_tint">快来搜点干货吧*≧▽≦*</string>

    //设置
    <string name="setting_normal">通用设置</string>
    <string name="setting_cache">自动缓存</string>
    <string name="setting_image">无图模式</string>
    <string name="setting_night">夜间模式</string>
    <string name="setting_other">其它设置</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_clear">清除缓存</string>
    <string name="setting">设置</string>
    <string name="send_email">选择邮件客户端:</string>
    <string name="load_more_no_data">没有多余的干货了(*≧Д≦*)</string>
    <string name="register_account_hint">邮箱/手机号</string>
    <string name="register_password_hint">输入密码</string>
    <string name="register_confirm_password_hint">确认密码</string>
    <string name="register_success">注册成功</string>
    <string name="fail_to_obtain_wx_author">获取微信公众号列表失败</string>
</resources>
