<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/register_bac">

    <android.support.v7.widget.Toolbar
        android:id="@+id/register_toolbar"
        style="@style/AppTheme.Toolbar"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp" >
        <TextView
            android:id="@+id/register_toolbar_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />
    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/register_password_edit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:background="@drawable/bg_conner_grey"
        android:layout_marginStart="@dimen/dp_48"
        android:layout_marginEnd="@dimen/dp_48"
        android:inputType="textPassword"
        android:hint="@string/register_password_hint"
        android:textColorHint="@color/light_white"
        android:layout_centerInParent="true"
        android:padding="@dimen/dp_12"
        android:drawableStart="@drawable/ic_register_password"
        android:drawablePadding="@dimen/dp_20" />

    <EditText
        android:id="@+id/register_account_edit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:background="@drawable/bg_conner_grey"
        android:layout_marginStart="@dimen/dp_48"
        android:layout_marginEnd="@dimen/dp_48"
        android:inputType="number"
        android:hint="@string/register_account_hint"
        android:textColorHint="@color/light_white"
        android:layout_above="@id/register_password_edit"
        android:layout_marginBottom="@dimen/dp_36"
        android:padding="@dimen/dp_12"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="@dimen/dp_20"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <EditText
        android:id="@+id/register_confirm_password_edit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:background="@drawable/bg_conner_grey"
        android:layout_marginStart="@dimen/dp_48"
        android:layout_marginEnd="@dimen/dp_48"
        android:inputType="textPassword"
        android:hint="@string/register_confirm_password_hint"
        android:textColorHint="@color/light_white"
        android:layout_below="@id/register_password_edit"
        android:layout_marginTop="@dimen/dp_6"
        android:padding="@dimen/dp_12"
        android:drawableStart="@drawable/ic_register_password"
        android:drawablePadding="@dimen/dp_20" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:background="@drawable/bg_conner_green"
        android:layout_marginStart="@dimen/dp_48"
        android:layout_marginEnd="@dimen/dp_48"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_21"
        android:layout_below="@id/register_confirm_password_edit"
        android:layout_marginTop="@dimen/dp_60"/>
</RelativeLayout>