<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_group"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/login_toolbar"
        style="@style/AppTheme.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_54"
        android:background="@color/shallow_green"
        app:layout_scrollFlags="scroll|enterAlways"
        app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
        app:title="@string/login_in" />

    <LinearLayout
        android:id="@+id/login_account_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_toolbar"
        android:layout_marginStart="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_124"
        android:layout_marginEnd="@dimen/dp_48"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/dp_12">

        <ImageView
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:contentDescription="@null"
            android:src="@drawable/ic_account" />

        <EditText
            android:id="@+id/login_account_edit"
            style="@style/style_circle_edit"
            android:layout_marginStart="@dimen/dp_6"
            android:hint="@string/login_account_tint" />
    </LinearLayout>

    <View
        android:id="@+id/login_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_below="@id/login_account_group"
        android:layout_marginStart="@dimen/dp_64"
        android:layout_marginEnd="@dimen/dp_64"
        android:background="@color/grey_divider" />

    <LinearLayout
        android:id="@+id/login_password_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_divider"
        android:layout_marginStart="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_1"
        android:layout_marginEnd="@dimen/dp_48"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/dp_12">

        <ImageView
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:contentDescription="@null"
            android:src="@drawable/ic_password" />

        <EditText
            android:id="@+id/login_password_edit"
            style="@style/style_circle_edit"
            android:layout_marginStart="@dimen/dp_6"
            android:hint="@string/login_password_tint"
            android:inputType="textPassword" />
    </LinearLayout>

    <View
        android:id="@+id/register_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_below="@id/login_password_group"
        android:layout_marginStart="@dimen/dp_64"
        android:layout_marginEnd="@dimen/dp_64"
        android:background="@color/grey_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_divider"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_32"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_btn"
            style="@style/style_circle_btn"
            android:layout_marginTop="@dimen/dp_32"
            android:background="@drawable/bg_conner_green"
            android:text="@string/login_in" />

        <TextView
            android:id="@+id/login_or_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_12"
            android:text="@string/or"
            android:textColor="@color/comment_text"
            android:textSize="@dimen/sp_16" />

        <Button
            android:id="@+id/login_register_btn"
            style="@style/style_circle_btn"
            android:layout_marginTop="@dimen/dp_12"
            android:background="@drawable/bg_conner_green"
            android:text="@string/register" />
    </LinearLayout>
</RelativeLayout>
