<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="false"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="@dimen/dp_0">

        <android.support.v7.widget.Toolbar
            android:id="@+id/setting_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_54"
            app:title="@string/setting"
            android:background="@drawable/blue_gradient_bg"
            app:layout_scrollFlags="scroll|enterAlways"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:text="@string/setting_normal"
            android:textColor="@color/comment_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/drawer_item_bg_n"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/dp_12">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_auto_cache" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_12"
                    android:layout_weight="1"
                    android:text="@string/setting_cache"
                    android:textColor="@color/setting_text" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/cb_setting_cache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/abc_btn_check_material"
                    android:buttonTint="@color/colorPrimary"
                    android:checked="true"
                    tools:ignore="PrivateResource" />
            </LinearLayout>

            <include layout="@layout/divider_line_05" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/dp_12">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_no_image" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_12"
                    android:layout_weight="1"
                    android:text="@string/setting_image"
                    android:textColor="@color/setting_text" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/cb_setting_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/abc_btn_check_material"
                    android:buttonTint="@color/colorPrimary"
                    tools:ignore="PrivateResource" />
            </LinearLayout>

            <include layout="@layout/divider_line_05" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/dp_12">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_night_mode" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_12"
                    android:layout_weight="1"
                    android:text="@string/setting_night"
                    android:textColor="@color/setting_text" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/cb_setting_night"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/abc_btn_check_material"
                    android:buttonTint="@color/colorPrimary"
                    tools:ignore="PrivateResource" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:text="@string/setting_other"
            android:textColor="@color/comment_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/drawer_item_bg_n"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ll_setting_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_feedback"
                android:drawablePadding="@dimen/dp_12"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:padding="@dimen/dp_12"
                android:text="@string/setting_feedback"
                android:textColor="@color/setting_text" />

            <include layout="@layout/divider_line_05" />

            <LinearLayout
                android:id="@+id/ll_setting_clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/dp_12">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_cache_clean" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_12"
                    android:layout_weight="1"
                    android:text="@string/setting_clear"
                    android:textColor="@color/setting_text" />

                <TextView
                    android:id="@+id/tv_setting_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/comment_text" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>